# Ourochronos

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  ourochronos.toml.example
.github/workflows/: ci.yml
docs/: case_studies.md  completion_audit.md  foundations.md  guide.md  philosophy.md  positioning.md  specification.md  standard.md  theory.md  whole_language_migration.md
examples/: assert_test.ouro  bench_case_studies.rs  bootstrap.ouro  combinators.ouro  data_structures.ouro  effects.ouro  expression_syntax.ouro  fibonacci.ouro  fibonacci100m.ouro  fibonacci10m.ouro  fibonacci1m.ouro  halting_limit.ouro  hello.ouro  let_bindings.ouro  paradox.ouro  primality.ouro  procedures.ouro  program.ouro  pspace_contract.ouro  quantum_identity.ouro  quantum_reset.ouro  quantum_suicide.ouro  recursion.ouro  sat.ouro  simple.ouro  simple_string.ouro  sqrt.ouro  stochastic_accept.ouro  stochastic_ambiguous.ouro  strings.ouro  temporal.ouro  temporal_sort.ouro  temporal_variables.ouro  turing_complete.ouro
examples/case_studies/: circular_dataflow.ouro  mutual_exclusion.ouro  retrocausal_game.ouro
examples/modules/: app.ouro  math_lib.ouro
src/: action.rs  analysis.rs  aot.rs  ast.rs  audit.rs  bytecode.rs  bytecode_action.rs  bytecode_temporal.rs  bytecode_timeloop.rs  bytecode_verifier.rs  bytecode_vm.rs  complexity.rs  core_types.rs  debugger.rs  determinism_tests.rs  error.rs  fast_vm.rs  ffi.rs  halting.rs  hir.rs  io.rs  jit.rs  launcher.rs  lexer.rs  lib.rs  linker.rs  lsp.rs  main.rs  memo.rs  module.rs  module_graph.rs  object_compiler.rs  optimizer.rs  package.rs  parser.rs  profiler.rs  property_tests.rs  provenance.rs  repl.rs  semantics.rs  (+7 more)
src/audit/: entry.rs  global.rs  integration.rs  logger.rs  metrics.rs  mod.rs  temporal_events.rs
src/compiler/: mod.rs
src/core/: address.rs  data_structures.rs  error.rs  memory.rs  mod.rs  paged_memory.rs  provenance.rs  stack.rs  value.rs
src/optimization/: aot.rs  jit.rs  memo.rs  mod.rs  optimizer.rs  tracing_jit.rs
src/parser/: arithmetic.rs  data_structures.rs  domain.rs  io_ops.rs  keyword_map.rs  memory_ops.rs  mod.rs  stack_ops.rs  string_ops.rs  temporal.rs
src/runtime/: ffi.rs  io.rs  mod.rs  package.rs
src/stdlib/: mod.rs  procedures.rs
src/temporal/: action.rs  cache.rs  effect_adapter.rs  global_solver.rs  ir.rs  mod.rs  quantum.rs  region.rs  smt_encoder.rs  stochastic.rs  timeloop.rs  transaction.rs  transition_graph.rs
src/tooling/: debugger.rs  frontend.rs  lsp.rs  (+3 more)
tests/: main.rs
(+28 files in other folders)
