[package]
name = "ourochronos"
version = "0.2.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["OUROCHRONOS Project"]
description = "A closed timelike curve programming language"
license = "MIT"
repository = "https://github.com/sunyaisblank/Ourochronos"
homepage = "https://github.com/sunyaisblank/Ourochronos"
readme = "README.md"
keywords = ["temporal", "programming-language", "time-loop", "fixed-point"]
categories = ["compilers", "science"]

[dependencies]
lsp-server = { version = "0.7", optional = true }
lsp-types = { version = "0.95", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
libloading = { version = "0.8", optional = true }
z3 = "0.12.1"
libc = "0.2"

[features]
default = []
dynamic-ffi = ["libloading"]
lsp = ["lsp-server", "lsp-types", "serde_json", "serde"]

[[bin]]
name = "ourochronos"
path = "src/main.rs"

[dev-dependencies]
proptest = "1.4"
